--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "livewire/livewire": "^2.12",
         "mercuryseries/flashy": "^1.0",
         "realrashid/sweet-alert": "^7.2",
-        "simplesoftwareio/simple-qrcode": "^4.2"
+        "simplesoftwareio/simple-qrcode": "^4.2",
+        "stripe/stripe-php": "^18.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
